// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatRating concats stars, review score and review description 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    ★★★
  </Text>
   - 
  8.6 Good Enough
</Text>
`;

exports[`formatRating omits the dash when review is missing 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    ★★★★★
  </Text>
  
  
</Text>
`;

exports[`formatRating omits the dash when stars are missing 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    
  </Text>
  
  8.6 Good Enough
</Text>
`;
